--- a/OnlineTutor2/Views/Teacher/Index.cshtml
+++ b/OnlineTutor2/Views/Teacher/Index.cshtml
@@ -97,7 +97,7 @@
             <div class="card-body d-flex flex-column">
                 <p class="card-text d-none d-md-block">Анализ успеваемости учеников и классов</p>
                 <a href="#" class="btn btn-primary mt-auto w-100">
-                    <i class="fas fa-chart-line"></i> <span class="d-none d-sm-inline">Анализ</span>
+                    <i class="fas fa-chart-line"></i> <span class="d-none d-sm-inline">Успеваемость</span>
                 </a>
             </div>
         </div>
