--- a/OnlineTutor2/Views/Class/Details.cshtml
+++ b/OnlineTutor2/Views/Class/Details.cshtml
@@ -137,6 +137,7 @@
                     var allTestsCount = ViewBag.AllTestsCount as int? ?? 0;
                     var spellingTestsCount = ViewBag.SpellingTestsCount as int? ?? 0;
                     var punctuationTestsCount = ViewBag.PunctuationTestsCount as int? ?? 0;
+                    var orthoeopyTestsCount = ViewBag.OrthoeopyTestsCount as int? ?? 0;
                     var regularTestsCount = ViewBag.RegularTestsCount as int? ?? 0;
                 }
             
@@ -162,10 +163,16 @@
                                     Пунктуация (@punctuationTestsCount)
                                 </button>
                             }
+                            @if (punctuationTestsCount > 0)
+                            {
+                                <button type="button" class="btn btn-outline-warning" onclick="filterTests('orthoeopy')">
+                                    Орфоэпия (@orthoeopyTestsCount)
+                                </button>
+                            }
                             @if (regularTestsCount > 0)
                             {
                                 <button type="button" class="btn btn-outline-info" onclick="filterTests('regular')">
-                                    Обычные (@regularTestsCount)
+                                    Классические (@regularTestsCount)
                                 </button>
                             }
                         </div>
@@ -255,11 +262,17 @@
                         <h5 class="mt-3 text-muted">Тестов пока нет</h5>
                         <p class="text-muted">Создайте первый тест для этого класса</p>
                         <div class="btn-group" role="group">
-                            <a asp-controller="SpellingTest" asp-action="Create" class="btn btn-primary">
-                                <i class="fas fa-spell-check"></i> Тест на орфографию
+                            <a asp-controller="SpellingTest" asp-action="Create" class="btn btn-outline-primary">
+                                <i class="fas fa-spell-check"></i> Орфография
                             </a>
-                            <a asp-controller="Test" asp-action="Create" class="btn btn-outline-info">
-                                <i class="fas fa-tasks"></i> Обычный тест
+                            <a asp-controller="PunctuationTest" asp-action="Create" class="btn btn-outline-success">
+                                <i class="fas fa-tasks"></i> Пунктуация
+                            </a>
+                            <a asp-controller="OrthoeopyTest" asp-action="Create" class="btn btn-outline-warning">
+                                <i class="fas fa-tasks"></i> Пунктуация
+                            </a>
+                            <a asp-controller="RegularTest" asp-action="Create" class="btn btn-outline-info">
+                                <i class="fas fa-tasks"></i> Классические
                             </a>
                         </div>
                     </div>
