--- a/OnlineTutor2/Views/Class/Details.cshtml
+++ b/OnlineTutor2/Views/Class/Details.cshtml
@@ -262,16 +262,16 @@
                         <h5 class="mt-3 text-muted">Тестов пока нет</h5>
                         <p class="text-muted">Создайте первый тест для этого класса</p>
                         <div class="btn-group" role="group">
-                            <a asp-controller="SpellingTest" asp-action="Create" class="btn btn-outline-primary">
+                            <a asp-controller="SpellingTest" asp-action="Create" class="btn btn-outline-secondary">
                                 <i class="fas fa-spell-check"></i> Орфография
                             </a>
-                            <a asp-controller="PunctuationTest" asp-action="Create" class="btn btn-outline-success">
+                            <a asp-controller="PunctuationTest" asp-action="Create" class="btn btn-outline-secondary">
+                                <i class="fas fa-quote-right"></i> Пунктуация
+                            </a>
+                            <a asp-controller="OrthoeopyTest" asp-action="Create" class="btn btn-outline-secondary">
                                 <i class="fas fa-tasks"></i> Пунктуация
                             </a>
-                            <a asp-controller="OrthoeopyTest" asp-action="Create" class="btn btn-outline-warning">
-                                <i class="fas fa-tasks"></i> Пунктуация
-                            </a>
-                            <a asp-controller="RegularTest" asp-action="Create" class="btn btn-outline-info">
+                            <a asp-controller="RegularTest" asp-action="Create" class="btn btn-outline-secondary">
                                 <i class="fas fa-tasks"></i> Классические
                             </a>
                         </div>
