--- a/OnlineTutor2/Views/Admin/Index.cshtml
+++ b/OnlineTutor2/Views/Admin/Index.cshtml
@@ -242,7 +242,7 @@
                 </div>
                 <p>Будут удалены:</p>
                 <ul>
-                    <li>Все результаты тестов на орфографию</li>
+                    <li>Все результаты тестов по орфографии</li>
                     <li>Все результаты обычных тестов</li>
                     <li>Вся статистика прохождения</li>
                     <li>История ответов учеников</li>
