--- a/OnlineTutor2/Views/Admin/TestResults.cshtml
+++ b/OnlineTutor2/Views/Admin/TestResults.cshtml
@@ -281,10 +281,10 @@
                 </div>
                 <p>Будут удалены:</p>
                 <ul>
-                    <li>Все результаты тестов на орфографию: <strong>@Model.Count(r => r.TestType == "Орфография")</strong></li>
+                    <li>Все результаты тестов по орфографии: <strong>@Model.Count(r => r.TestType == "Орфография")</strong></li>
                     <li>Все результаты классических тестов: <strong>@Model.Count(r => r.TestType == "Классический")</strong></li>
-                    <li>Все результаты тестов на пунктуацию: <strong>@Model.Count(r => r.TestType == "Пунктуация")</strong></li>
-                    <li>Все результаты тестов на орфоэпию: <strong>@Model.Count(r => r.TestType == "Орфоэпия")</strong></li>
+                    <li>Все результаты тестов по пунктуации: <strong>@Model.Count(r => r.TestType == "Пунктуация")</strong></li>
+                    <li>Все результаты тестов по орфоэпии: <strong>@Model.Count(r => r.TestType == "Орфоэпия")</strong></li>
                     <li>Вся статистика прохождения</li>
                     <li>История ответов учеников</li>
                 </ul>
