--- a/OnlineTutor2/Views/OrthoeopyTest/AddQuestion.cshtml
+++ b/OnlineTutor2/Views/OrthoeopyTest/AddQuestion.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OnlineTutor2.Models.OrthoeopyQuestion
 @{
-    ViewData["Title"] = "Добавить вопрос на орфоэпию";
+    ViewData["Title"] = "Добавить вопрос по орфоэпии";
     var test = ViewBag.Test as OnlineTutor2.Models.OrthoeopyTest;
     var nextOrderIndex = ViewBag.NextOrderIndex;
 }
@@ -10,7 +10,7 @@
         <div class="card shadow">
             <div class="card-header bg-success text-white">
                 <h4 class="mb-0">
-                    <i class="fas fa-plus"></i> Добавить вопрос на орфоэпию
+                    <i class="fas fa-plus"></i> Добавить вопрос по орфоэпии
                 </h4>
             </div>
             <div class="card-body">
