--- a/OnlineTutor2/Views/OrthoeopyTest/Create.cshtml
+++ b/OnlineTutor2/Views/OrthoeopyTest/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OnlineTutor2.ViewModels.CreateOrthoeopyTestViewModel
 @{
-    ViewData["Title"] = "Создание теста на орфоэпию";
+    ViewData["Title"] = "Создание теста по орфоэпии";
 }
 
 <div class="row justify-content-center">
@@ -8,7 +8,7 @@
         <div class="card shadow">
             <div class="card-header bg-success text-white">
                 <h4 class="mb-0">
-                    <i class="fas fa-volume-up"></i> Создание теста на орфоэпию
+                    <i class="fas fa-volume-up"></i> Создание теста по орфоэпии
                 </h4>
             </div>
             <div class="card-body">
