--- a/OnlineTutor2/Views/OrthoeopyTest/Index.cshtml
+++ b/OnlineTutor2/Views/OrthoeopyTest/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="d-flex justify-content-between align-items-center mb-4">
     <div>
-        <h2><i class="fas fa-volume-up text-success"></i> Тесты на орфоэпию</h2>
+        <h2><i class="fas fa-volume-up text-success"></i> Тесты по орфоэпии</h2>
         <p class="text-muted">Управление тестами на знание правильного ударения в словах</p>
     </div>
     <div>
