--- a/OnlineTutor2/Views/PunctuationTest/AddQuestion.cshtml
+++ b/OnlineTutor2/Views/PunctuationTest/AddQuestion.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OnlineTutor2.Models.PunctuationQuestion
 @{
-    ViewData["Title"] = "Добавить вопрос на пунктуацию";
+    ViewData["Title"] = "Добавить вопрос по пунктуации";
     var test = ViewBag.Test as OnlineTutor2.Models.PunctuationTest;
     var nextOrderIndex = ViewBag.NextOrderIndex;
 }
@@ -10,7 +10,7 @@
         <div class="card shadow">
             <div class="card-header bg-warning text-dark">
                 <h4 class="mb-0">
-                    <i class="fas fa-plus"></i> Добавить вопрос на пунктуацию
+                    <i class="fas fa-plus"></i> Добавить вопрос по пунктуации
                 </h4>
             </div>
             <div class="card-body">
