--- a/OnlineTutor2/Views/StudentTest/History.cshtml
+++ b/OnlineTutor2/Views/StudentTest/History.cshtml
@@ -188,7 +188,7 @@ else
         <div class="card mb-4">
             <div class="card-header">
                 <h5 class="mb-0">
-                    <i class="fas fa-exclamation text-warning"></i> Тесты на пунктуацию
+                    <i class="fas fa-exclamation text-warning"></i> Тесты по пунктуации
                 </h5>
             </div>
             <div class="card-body p-0">
@@ -268,7 +268,7 @@ else
         <div class="card mb-4">
             <div class="card-header">
                 <h5 class="mb-0">
-                    <i class="fas fa-volume-up text-success"></i> Тесты на орфоэпию
+                    <i class="fas fa-volume-up text-success"></i> Тесты по орфоэпии
                 </h5>
             </div>
             <div class="card-body p-0">
