--- a/OnlineTutor2/Views/StudentTest/Index.cshtml
+++ b/OnlineTutor2/Views/StudentTest/Index.cshtml
@@ -475,7 +475,7 @@ else
                 <p>Тест: <strong id="testTitle"></strong></p>
                 <p>Время на выполнение: <strong id="testTime"></strong> минут</p>
                 <div id="punctuationInfo" class="alert alert-warning" style="display: none;">
-                    <h6><i class="fas fa-exclamation-triangle"></i> Особенности теста на пунктуацию:</h6>
+                    <h6><i class="fas fa-exclamation-triangle"></i> Особенности теста по пунктуации:</h6>
                     <ul class="mb-0">
                         <li>В предложениях вместо запятых стоят номера позиций</li>
                         <li>Укажите номера без пробелов и знаков препинания, где должны быть запятые</li>
@@ -484,7 +484,7 @@ else
                     </ul>
                 </div>
                 <div id="orthoeopyInfo" class="alert alert-success" style="display: none;">
-                    <h6><i class="fas fa-info-circle"></i> Особенности теста на орфоэпию:</h6>
+                    <h6><i class="fas fa-info-circle"></i> Особенности теста по орфоэпии:</h6>
                     <ul class="mb-0">
                         <li>В каждом вопросе нужно выбрать правильное ударение в слове</li>
                         <li>Будут предложены варианты с ударением на разных слогах</li>
