--- a/OnlineTutor2/Views/TestAnalytics/SpellingAnalytics.cshtml
+++ b/OnlineTutor2/Views/TestAnalytics/SpellingAnalytics.cshtml
@@ -96,7 +96,7 @@
                 <div class="info-column">
                     <div class="test-info-item mb-2">
                         <i class="fas fa-spell-check text-primary"></i>
-                        <span class="info-label">Тест на орфографию</span>
+                        <span class="info-label">Тест по орфографии</span>
                     </div>
                     @if (!string.IsNullOrEmpty(Model.SpellingTest.Description))
                     {
