--- a/OnlineTutor2/Views/OrthoeopyTest/EditQuestion.cshtml
+++ b/OnlineTutor2/Views/OrthoeopyTest/EditQuestion.cshtml
@@ -9,7 +9,7 @@
         <div class="card shadow">
             <div class="card-header bg-success text-white">
                 <h4 class="mb-0">
-                    <i class="fas fa-edit"></i> Редактирование вопроса на орфоэпию
+                    <i class="fas fa-edit"></i> Редактирование вопроса по орфоэпии
                 </h4>
             </div>
             <div class="card-body">
