--- a/OnlineTutor2/Views/OrthoeopyTest/ImportQuestions.cshtml
+++ b/OnlineTutor2/Views/OrthoeopyTest/ImportQuestions.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OnlineTutor2.ViewModels.OrthoeopyQuestionImportViewModel
 @{
-    ViewData["Title"] = "Импорт вопросов на орфоэпию";
+    ViewData["Title"] = "Импорт вопросов по орфоэпии";
     var test = ViewBag.Test as OnlineTutor2.Models.OrthoeopyTest;
 }
 
@@ -9,7 +9,7 @@
         <div class="card shadow">
             <div class="card-header bg-success text-white">
                 <h4 class="mb-0">
-                    <i class="fas fa-file-import"></i> Импорт вопросов на орфоэпию
+                    <i class="fas fa-file-import"></i> Импорт вопросов по орфоэпии
                 </h4>
             </div>
             <div class="card-body">
