--- a/OnlineTutor2/Views/PunctuationTest/Create.cshtml
+++ b/OnlineTutor2/Views/PunctuationTest/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OnlineTutor2.ViewModels.CreatePunctuationTestViewModel
 @{
-    ViewData["Title"] = "Создание теста на пунктуацию";
+    ViewData["Title"] = "Создание теста по пунктуации";
 }
 
 <div class="row justify-content-center">
@@ -8,7 +8,7 @@
         <div class="card shadow">
             <div class="card-header bg-warning text-dark">
                 <h4 class="mb-0">
-                    <i class="fas fa-exclamation"></i> Создание теста на пунктуацию
+                    <i class="fas fa-exclamation"></i> Создание теста по пунктуации
                 </h4>
             </div>
             <div class="card-body">
