--- a/OnlineTutor2/Views/SpellingTest/Create.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OnlineTutor2.ViewModels.CreateSpellingTestViewModel
 @{
-    ViewData["Title"] = "Создание теста на орфографию";
+    ViewData["Title"] = "Создание теста по орфографии";
 }
 
 <div class="row justify-content-center">
@@ -8,7 +8,7 @@
         <div class="card shadow">
             <div class="card-header bg-success text-white">
                 <h4 class="mb-0">
-                    <i class="fas fa-spell-check"></i> Создание теста на орфографию
+                    <i class="fas fa-spell-check"></i> Создание теста по орфографии
                 </h4>
             </div>
             <div class="card-body">
