--- a/OnlineTutor2/Views/Test/OrthoeopyTests.cshtml
+++ b/OnlineTutor2/Views/Test/OrthoeopyTests.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<OnlineTutor2.Models.OrthoeopyTest>
 @{
-    ViewData["Title"] = "Тесты на орфоэпию";
+    ViewData["Title"] = "Тесты по орфоэпии";
     var category = ViewBag.Category as OnlineTutor2.Models.TestCategory;
 }
 
@@ -33,7 +33,7 @@
 {
     <div class="text-center py-5">
         <i class="fas fa-volume-up text-muted" style="font-size: 4rem;"></i>
-        <h4 class="mt-3 text-muted">У вас пока нет тестов на орфоэпию</h4>
+        <h4 class="mt-3 text-muted">У вас пока нет тестов по орфоэпии</h4>
         <p class="text-muted">Создайте свой первый тест для проверки знаний орфоэпии</p>
         <a asp-controller="OrthoeopyTest" asp-action="Create" class="btn btn-success">
             <i class="fas fa-plus"></i> Создать первый тест
