--- a/OnlineTutor2/Views/Test/PunctuationTests.cshtml
+++ b/OnlineTutor2/Views/Test/PunctuationTests.cshtml
@@ -35,7 +35,7 @@
 {
     <div class="text-center py-5">
         <i class="@category.IconClass text-muted" style="font-size: 4rem;"></i>
-        <h4 class="mt-3 text-muted">У вас пока нет тестов на пунктуацию</h4>
+        <h4 class="mt-3 text-muted">У вас пока нет тестов по пунктуации</h4>
         <p class="text-muted">Создайте свой первый тест для проверки знаний пунктуации</p>
         <a asp-controller="PunctuationTest" asp-action="Create" class="btn btn-warning">
             <i class="fas fa-plus"></i> Создать первый тест
