--- a/OnlineTutor2/Views/Test/SpellingTests.cshtml
+++ b/OnlineTutor2/Views/Test/SpellingTests.cshtml
@@ -35,7 +35,7 @@
 {
     <div class="text-center py-5">
         <i class="@category.IconClass text-muted" style="font-size: 4rem;"></i>
-        <h4 class="mt-3 text-muted">У вас пока нет тестов на орфографию</h4>
+        <h4 class="mt-3 text-muted">У вас пока нет тестов по орфографии</h4>
         <p class="text-muted">Создайте свой первый тест для проверки орфографических навыков учеников</p>
         <a asp-controller="SpellingTest" asp-action="Create" class="btn btn-primary">
             <i class="fas fa-plus"></i> Создать первый тест
