--- a/OnlineTutor2/Views/Test/Index.cshtml
+++ b/OnlineTutor2/Views/Test/Index.cshtml
@@ -48,7 +48,7 @@ else
                     break; *@
             }
 
-            <div class="col-md-6 col-lg-4 mb-4">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2-4 col-xxl-5th mb-3">
                 <div class="card h-100 category-card">
                     <div class="card-body d-flex flex-column">
                         <div class="category-icon mb-3 text-center">
